--- a/template.yml
+++ b/template.yml
@@ -11,9 +11,9 @@ Resources:
   VisitorCounterFunction:
     Type: 'AWS::Serverless::Function'
     Properties:
-      FunctionName: VisitorLogWitcoskiTech
+      FunctionName: !Sub '${AWS::StackName}-VisitorCounter-${AWS::Region}'
       Handler: lambda_function.lambda_handler
-      Runtime: python3.11
+      Runtime: python3.9
       CodeUri: ./lambda
       Environment:
         Variables:
@@ -21,6 +21,13 @@ Resources:
       Policies:
         - DynamoDBCrudPolicy:
             TableName: !Ref VisitorCounterTable
+        - Statement:
+            - Effect: Allow
+              Action:
+                - dynamodb:GetItem
+                - dynamodb:PutItem
+                - dynamodb:UpdateItem
+              Resource: !GetAtt VisitorCounterTable.Arn
       Events:
         Api:
           Type: Api
@@ -32,7 +39,7 @@ Resources:
   VisitorCounterTable:
     Type: 'AWS::DynamoDB::Table'
     Properties:
-      TableName: VisitorCounterWitcoskiTech
+      TableName: !Sub '${AWS::StackName}-VisitorCounter-${AWS::Region}'
       AttributeDefinitions:
         - AttributeName: id
           AttributeType: S
@@ -40,6 +47,7 @@ Resources:
         - AttributeName: id
           KeyType: HASH
       BillingMode: PAY_PER_REQUEST
+
 
 Outputs:
   ApiEndpoint:
