--- a/.github/workflows/backend-cicd.yml
+++ b/.github/workflows/backend-cicd.yml
@@ -24,15 +24,17 @@ jobs:
         pip install pytest
         pip install -r lambda/requirements.txt
 
-    - name: Run tests
-      run: pytest lambda/tests/
-
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1
+
+    - name: Run tests
+      run: |
+        cd lambda
+        pytest tests/
 
     - name: SAM build
       run: sam build
