--- a/.github/workflows/backend-cicd.yml
+++ b/.github/workflows/backend-cicd.yml
@@ -1,4 +1,4 @@
-name: Backend CI/CD
+name: CI/CD Pipeline
 
 on:
   push:
@@ -6,6 +6,7 @@ on:
     paths:
       - 'template.yml'
       - 'lambda/**'
+      - 'frontend/**'  # Add this line to include frontend changes
 
 jobs:
   test-and-deploy:
@@ -21,22 +22,32 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install pytest
         pip install -r lambda/requirements.txt
-
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-1
 
     - name: Run tests
       run: |
         cd lambda
         pytest tests/
 
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-east-1  # or your preferred region
+
     - name: SAM build
       run: sam build
 
     - name: SAM deploy
       run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset
+
+    # Add these steps for frontend deployment
+    - name: Deploy frontend to S3
+      run: |
+        aws s3 sync ./frontend s3://witcoskitech.com --delete
+
+    - name: Invalidate CloudFront Distribution
+      run: |
+        aws cloudfront create-invalidation --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} --paths "/*"
