Fix CloudFront invalidation in frontend deployment workflow

--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -25,5 +25,7 @@ jobs:
         aws s3 sync ./HTML s3://witcoskitech.com --delete
 
     - name: Invalidate CloudFront Distribution
+      env:
+        DISTRIBUTION_ID: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
       run: |
-        aws cloudfront create-invalidation --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} --paths "/*"
+        aws cloudfront create-invalidation --distribution-id $DISTRIBUTION_ID --paths "/*"
